--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -9,48 +9,48 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/colorBackground"
+    android:orientation="vertical"
     tools:context="com.brandondlim.myappportfolio.MainActivity">
 
     <TextView
         android:id="@+id/title"
         style="@style/AppTheme.center"
-        android:layout_alignParentTop="true"
-        android:text="My Nanodegree Apps" />
+        android:text="@string/title" />
 
     <Button
         android:id="@+id/popular_movies"
         style="@style/AppTheme.center"
-        android:layout_below="@id/title"
-        android:text="@string/popular_movies"/>
+        android:text="@string/popular_movies"
+        android:onClick="buttonPressed"/>
 
     <Button
         android:id="@+id/stock_hawk"
         style="@style/AppTheme.center"
-        android:layout_below="@id/popular_movies"
-        android:text="@string/stock_hawk"/>
+        android:text="@string/stock_hawk"
+        android:onClick="buttonPressed"/>
 
     <Button
         android:id="@+id/build_it_bigger"
         style="@style/AppTheme.center"
-        android:layout_below="@id/stock_hawk"
-        android:text="@string/build_it_bigger"/>
+        android:text="@string/build_it_bigger"
+        android:onClick="buttonPressed"/>
 
     <Button
         android:id="@+id/make_your_app_material"
         style="@style/AppTheme.center"
-        android:layout_below="@id/build_it_bigger"
-        android:text="@string/make_your_app_material"/>
+        android:text="@string/make_your_app_material"
+        android:onClick="buttonPressed"/>
 
     <Button
         android:id="@+id/go_ubiquitous"
         style="@style/AppTheme.center"
-        android:layout_below="@id/make_your_app_material"
-        android:text="@string/go_ubiquitous"/>
+        android:text="@string/go_ubiquitous"
+        android:onClick="buttonPressed"/>
 
     <Button
         android:id="@+id/capstone"
         style="@style/AppTheme.center"
-        android:layout_below="@id/go_ubiquitous"
-        android:text="@string/capstone"/>
+        android:text="@string/capstone"
+        android:onClick="buttonPressed"/>
 
-</RelativeLayout>
+</LinearLayout>
