--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,12 +9,12 @@
     </style>
 
     <style name="AppTheme.center" parent="AppTheme">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:typeface">serif</item>
         <item name="android:textSize">20dp</item>
-        <item name="android:padding">10dp</item>
+        <item name="android:padding">15dp</item>
     </style>
 
 </resources>
